--- a/3.Threads/3.Threads.ipynb
+++ b/3.Threads/3.Threads.ipynb
@@ -597,8 +597,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.5 64-bit ('py38': venv)",
-   "name": "python385jvsc74a57bd04a0ad87e8b5d33768bd025306b84ef7a0f3cfeaa852ee58d9b819e0e4cbb3e53"
+   "display_name": "Python 3.10.7 ('py310')",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -610,14 +611,19 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.7"
   },
   "metadata": {
    "interpreter": {
     "hash": "4a0ad87e8b5d33768bd025306b84ef7a0f3cfeaa852ee58d9b819e0e4cbb3e53"
    }
   },
-  "orig_nbformat": 2
+  "orig_nbformat": 2,
+  "vscode": {
+   "interpreter": {
+    "hash": "53d00ba0b92f737b23b3e678e3a3ceb3fe4e948ad1ab95d9c6fdcbb4b4ec65f3"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
