--- a/5.Userspace/5.Userspace.ipynb
+++ b/5.Userspace/5.Userspace.ipynb
@@ -989,7 +989,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.7 ('py310')",
    "language": "python",
    "name": "python3"
   },
@@ -1003,9 +1003,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.7"
   },
-  "orig_nbformat": 2
+  "orig_nbformat": 2,
+  "vscode": {
+   "interpreter": {
+    "hash": "53d00ba0b92f737b23b3e678e3a3ceb3fe4e948ad1ab95d9c6fdcbb4b4ec65f3"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
